src/main/resources/Krakatau-master/tests/assembler/bad/badescapes4.j
.class public '\U111111'
.super java/lang/Object
.end class